[CCS-58] Making suggested changes!